tests/miniJava/neg/000333_mutation.MiniJava
class java { public static void Main ( return [ ] java ) { { } } }
